kornell-gwt/src/main/webapp/less/chat/chat.less
@import "../utils/colors";
@import "../utils/mixins";
@import "../utils/constants";
@import "../utils/forms";

.MessagePlace {
	.messageInboxPanel{
		width: @wrapperWidth;
		max-height: 1000px;
		height: ~"calc(100vh - 105px)";
		.threadPanel {
			.threadPanelItemsScroll {
				height: ~"calc(100vh - 246px)";
				max-height: ~"calc(1000px - 146px)";
			}
		}
	}
}
.AdminCourseClassPlace {
	.messageInboxPanel{
		width: @wrapperWidth;
		max-height: 1000px;
		height: ~"calc(100vh - 240px)";
		.threadPanel {
			.threadPanelItemsScroll {
				height: ~"calc(100vh - 385px)";
				max-height: ~"calc(1000px - 146px)";
			}
		}
	}
}
.ClassroomPlace {
	.messageInboxPanel{
		width: @rightPanelWidth;
		max-height: 1000px;
		height: ~"calc(100vh - 220px)";
		min-height: 460px;
		margin-top: 20px;
		.threadPanel {
			width: @rightPanelWidth;
			.threadPanelItemsScroll {
				height: ~"calc(100vh - 365px)";
				max-height: ~"calc(1000px - 146px)";
				min-height: 302px;
			}
		}
		.sidePanelScroll {
			display: none;
		}
	}
}
/*.threadPanelItemsScroll > div  {
  position: absolute !important;
  bottom: 0px;
  width: 100%;
}*/
.messageInboxPanel{
	min-height: 350px;
	margin: 0 auto;
	margin-top: 10px;
	@borderHighlight: 1px solid fade(@textHighlightColor, 50%);
	background-color: rgba(0, 0, 0, 0.05);
	height: 500px;
	border-radius: 8px;
	.boxSizing;
	.sidePanelScroll{
		width: 22%;
		height: ~"calc(100% - 11px)";
		padding: 5px;
		border-radius: 8px 0px 0px 8px;
		.sidePanel{
			width: 100%;
			.boxSizing;
			.filterPanel{
				background-color: @tableBackgroundColor;
			    margin-bottom: 8px;
			    height: 30px;
			    border-radius: 5px;
			    input{
			    	width: 75%;
				    font-size: 11px;
				    background-color: transparent;
				    border: 1px solid transparent;
				    color: #e3e3e3;
			    }
			    i{
				    color: @plainDiscreteTextColor;
				    background-color: transparent;
				    display: block;
				    line-height: 30px;
				    font-size: 12px;
					&:hover {
						cursor: pointer;
					}
			    }
			    .icon-search{
			    	float: right;
				    padding-right: 8px;
				}
				a{
			    	float: right;
				    padding-right: 4px;
					&:hover {
						text-decoration: none;
					}
				}
			}
			.threadListItem{
				.boxSizing;
				color: @niceTextColor;
				background-color: @tableBackgroundColor;
				font-size: 11px;
				line-height: 20px;
				margin-bottom: 6px;
				border-radius: 5px;
				padding: 6px;
				font-weight: bold;
				overflow: hidden;
				&:hover {
					background-color: @tableBackgroundHoverColor;
				}
				.unreadCount{
					color: @textHighlightColor;
				}
			}
			.selected{
				background-color: @tableBackgroundHoverColor;
			}
		}
	}
	.threadPanel{
		width: ~"calc(78% - 12px)";
		padding: 10px;
		border-radius: 0px 8px 8px 0px;
		.boxSizing;
		.threadTitle{
			font-size: 13px;
			color: @niceTextColor;
			padding-top: 8px;
			padding-bottom: 15px;
			margin-bottom: 5px;
			text-align: center;
			font-weight: bold;
			height: 22px;
			span{
				height: 20px;
				overflow: hidden;
			}
		}
		.threadPanelItemsScroll{
			min-height: 192px;
			margin-bottom: 5px;
			padding-right: 5px;
			.threadMessageWrapper{
				.boxSizing;
				background: @tableBackgroundHoverColor;
				margin: 5px;
				padding: 5px 8px;
				margin-left: 15px;
				border-radius: 10px;
				position: relative;
				.threadMessageHeader{
					color: @textHighlightDiscreteColor;
					font-size: 8px;
					font-size: 10px;
					margin-bottom: 5px;
				}
				.threadMessageItem{
					color: @niceTextColor;
					font-size: 12px;
					padding: 0px 10px;
					white-space: pre-wrap;
				}
				&:after {
					content: '';
					position: absolute;
					top: 40%;
					left: 0%;
					margin-left: -12px;
					border-top: 7px solid transparent;
					border-bottom: 7px solid transparent;
					border-right: 12px solid @tableBackgroundHoverColor;
				}
			}
			.overrideWrapper{
				margin-left: 0px !important;
				margin-right: 15px !important;
				background: @tableBackgroundColor !important;
				&:after {
					left: 100% !important;
					margin-left: 0px !important;
					margin-right: -12px !important;
					border-left: 12px solid @tableBackgroundColor !important;
					border-right: 0px !important;
				}
			}
		}
		.sendMessageWrapper{
			.boxSizing;
			padding-top: 6px;
			.messageTextArea{
				.boxSizing;
				width: 83%;
				float: left;
				height: 60px;
				font-size: 12px;
				line-height: 14px;
				resize: none;
			}
			.btnSend{
				.boxSizing;
				width: 15%;
				float: left;
				margin-top: 19px;
				margin-left: 10px;
			}
			span{
				color: @plainDiscreteTextColor;
				font-size: 9px;
				text-align: center;
				display: block;
				line-height: 25px;
				font-weight: bold;
			}
		}
	}
}



@media screen and ( max-height: 540px ){
    .ClassroomPlace {
    	.dockChatPanel{
	    	display: none;
	    }
	    .contentWrapper.chatDocked{
			width: 100%;
		}
    }
}
@media screen and ( min-height: 541px ){
    .ClassroomPlace{
    	.dockChatPanel{
		    position: fixed !important;
		    top: 45px;
		    bottom: 35px;
		    right: 0;
		    width: 320px !important;
		    border-left: 1px solid @textHighlightColor;
		    border-radius: 0px;
    		background: fade(@blackOrWhite, 30%);
		    box-sizing: border-box;
			    .messageInboxPanel {
				.sidePanelScroll{
					display: none;
				}
				.threadPanel {
					width: 320px;
					.messageTextArea {
						width: 74% !important;
					}
					.btnSend {
						width: 20%;
					}
					.threadPanelItemsScroll {
					    height: ~"calc(100vh - 245px)" !important;
					}
				}
		    }
	    }
	    .contentWrapper.chatDocked{
	    	width: ~"calc(100% - 320px)";
	    }
	}
}








.messagesPopup{
	right: 0 !important;
	left: initial !important;
	width: auto;
	.messagesPanel{
		width: 530px;
		margin: 0 auto;
		border-radius: 0px 0px 0px 15px;
		background-color: @modalBackgroundColor;
		.titlePanel{
			height: auto;
			padding-top: 12px;
			margin-left: 13px;
			text-align: center;
			margin-bottom: 3px;
			.lblTitle{
				color: @textHighlightColor;
				font-size: 18px;
				font-weight: bold;
				width: 100%;
				text-align: center;
			}
			.lblSubTitle{
				color: @niceTextColor;
				font-weight: bold;
				font-size: 12px;
				margin-top: 5px;
				float: left;
				width: 100%;
			}
			.profileSeparatorBar{
				width: 100%;
			}
		}
		.fieldPanelWrapper{
			height: auto;
			margin-bottom: 5px;
			width: 100%;
			.labelPanel{
				width: 80px;
				margin-right: 7px;
				margin-left: 20px;
				text-align: initial;
				float: left;
				.lblLabel{
					line-height: 12px;
					font-size: 12px;
					text-decoration: none;
				}
			}
			.fieldPanel{
				width: 275px;
				.lblValue{
					line-height: 14px;
					margin-left: 2px;
					margin-top: 5px;
					margin-bottom: 5px;
					font-size: 14px;
					font-weight: bold;
					width: 400px;
				}
				.textField{
					width: 380px;
					height: 12px;
					font-size: 12px;
				}
				.selectField{
					width: 393px;
					height: 24px;
						font-size: 11px;
				}
				.error{
					font-size: 10px;
					line-height: 12px;
				}
				.gwt-TextArea{
					height: 180px;
				}
			}
		}
		.standardButtonBar{
			width: 220px;
			padding: 15px 0px 10px 0px;
			.btnStandard{
				margin: 5px;
				margin-bottom: 10px;
			}
		}
	}
}

